alignment fix?

--- a/styles.css
+++ b/styles.css
@@ -6,35 +6,56 @@ body {
   
 }
 h1 {
+  font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+  align-items: center;
   background-color: rgb(130, 171, 99);
   color: rgb(87, 19, 175);
 }
 h2 {
+  font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+  align-items: center;
   display: inline;
   background-color: rgb(130, 171, 99);
   color: rgb(70, 15, 141);
 }
 h3 {
+  font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+  align-items: center;
   display: inline;
   background-color: rgb(130, 171, 99);
   color: rgb(87, 19, 175);
 }
 h4 {
+  font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+  align-items: center;
   display: inline;
   background-color: rgb(130, 171, 99);
   color: rgb(76, 19, 175);
 }
 h5 {
+  font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+  align-items: center;
   display: inline;
   background-color: rgb(130, 171, 99);
   color: rgb(87, 19, 175);
 }
 h6 {
+  font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+  align-items: center;
   display: inline;
   background-color: rgb(130, 171, 99);
   color: rgb(87, 19, 175);
 }
 p {
+  font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+  align-items: center;
   background-color: rgb(130, 171, 99);
   color: rgb(44, 20, 106);
 }
